# toygres

./: .dockerignore  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  RETRY-UPGRADE-SUMMARY.md  TODO.md  docker-compose.observability.yml  docker-compose.toygres-with-logging.yml  restart-server-debug.sh  server.log.bak  toygres
deploy/: Dockerfile.server  Dockerfile.ui  deploy-to-aks.sh  nginx.conf
deploy/k8s/: configmap.yaml  ingress.yaml  namespace.yaml  rbac.yaml  secret.yaml  server-deployment.yaml  ui-deployment.yaml
docs/: admin-interface-plan.md  backup-plan.md  cli-design.md  cms-database-plan.md  cms-idempotency-patterns.md  control-plane-guide.md  dns-locking-pattern.md  getting-started.md  health-monitor-plan.md  observability-architecture-diagram.md  observability-quickstart.md  phase0-complete.md  phase1-activities-plan.md  phase1-complete.md  phase2-complete.md  phase2-orchestrations-plan.md  plan.md  replication-plan.md  server-architecture.md  web-interface-design.md
migrations/cms/: 0001_initial_schema.sql  README.md
observability/: ARCHITECTURE-DIAGRAM.md  CLEANUP-SUMMARY.md  CURRENT-METRICS.md  DASHBOARDS.md  FINAL-STATUS.md  LOGGING-SETUP.md  METRICS-AVAILABLE.md  METRICS-COMPARISON.md  OBSERVABILITY-STATUS.md  README-FINAL.md  README.md  env.aks.example  env.local.example  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  promtail-config.yaml
prompts/: README.md  debugging-guide.md  implement-activity.md  implement-orchestration.md  project-context.md
scripts/: README.md  cleanup-deployments.sh  cleanup-single.sh  db-init.sh  db-migrate.sh  diagnose-missing-metrics.sh  drop-all-schemas.sh  drop-cms-schema.sh  drop-duroxide-schema.sh  force-kill-all.sh  list-deployments.sh  observability-status.sh  push-logs-to-loki.sh  setup-db.sh  setup-infra.sh  start-control-plane.sh  start-dev.sh  start-observability.sh  stop-control-plane.sh  stop-observability.sh
toygres-models/: Cargo.toml
toygres-models/src/: lib.rs
toygres-orchestrations/: Cargo.toml
toygres-orchestrations/src/: activity_names.rs  activity_types.rs  k8s_client.rs  lib.rs  names.rs  registry.rs  types.rs
toygres-orchestrations/src/activities/: delete_postgres.rs  deploy_postgres.rs  get_connection_strings.rs  mod.rs  raise_event.rs  test_connection.rs  wait_for_ready.rs
toygres-orchestrations/src/activities/cms/: create_instance_record.rs  db.rs  delete_instance_record.rs  free_dns_name.rs  get_instance_by_k8s_name.rs  get_instance_connection.rs  mod.rs  record_health_check.rs  record_instance_actor.rs  update_instance_health.rs  update_instance_state.rs
toygres-orchestrations/src/orchestrations/: create_instance.rs  delete_instance.rs  flows.rs  instance_actor.rs  mod.rs
toygres-orchestrations/src/templates/: postgres-service.yaml  postgres-statefulset.yaml
toygres-server/: Cargo.toml
toygres-server/examples/: ENV_VARS.md  README.md  manual_deploy.rs
toygres-server/src/: api.rs  auth.rs  cli.rs  config.rs  duroxide.rs  main.rs  worker.rs
toygres-server/src/commands/: instance.rs  mod.rs  orchestration.rs  server.rs  system.rs
toygres-server/src/db/: mod.rs
toygres-server/templates/: postgres-pvc.yaml
toygres-ui/: FEATURES.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
toygres-ui/src/: App.tsx
(+28 files in other folders)
