[workspace]
resolver = "2"
members = [
    "toygres-models",
    "toygres-orchestrations",
    "toygres-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Affan Dar"]
license = "MIT"

[workspace.dependencies]
# Duroxide framework (from GitHub)
duroxide = { git = "https://github.com/affandar/duroxide", features = ["observability"] }
duroxide-pg = { git = "https://github.com/affandar/duroxide-pg" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Kubernetes
kube = { version = "0.95", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23", features = ["latest"] }

# Azure SDK
azure_core = "0.20"
azure_identity = "0.20"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

