[package]
name = "toygres-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "toygres-server"
path = "src/main.rs"

[dependencies]
toygres-models = { path = "../toygres-models" }
toygres-orchestrations = { path = "../toygres-orchestrations" }

duroxide = { workspace = true }
duroxide-pg = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
kube = { workspace = true }
k8s-openapi = { workspace = true }
serde_yaml = "0.9"
tera = "1.19"
clap = { version = "4.5", features = ["derive"] }
tokio-postgres = "0.7"
reqwest = { version = "0.11", features = ["json"] }
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

